# S.S.T

./: .dockerignore  .env.core.example  .env.example  .env.old  .env.scout.example  .env.ui  .env.worker.example  .gitignore  AGENT_GUIDE.md  AI_HANDOVER.md  Archived_list.md  CHANGE_HISTORY.md  CONTRIBUTING.md  CONTRIBUTING_jp.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_jp.md  ERROR_LOGS.md  ERROR_LOGS_jp.md  GEMINI.md  HANDOVER.md  Handover_Document_20260511.md  Handover_Document_act-17_20260513.md  Handover_Document_more-AcoustID-01_20260527061743.md  IMPLEMENTATION_PLAN.md  LICENSE.md  LLM_setup.sh  NG_List_001.md  NG_List_002.md  README.md  README_ENV.md  README_ENV_jp.md  README_en.md  README_jp.md  Review_list.md  Review_list_analysis.md  SST_7B_Modelfile  SST_Modelfile  TEST_ENVIRONMENT.md  TEST_ENVIRONMENT_jp.md  TODO_Decentralization.md  (+24 more)
.antigravitycli/: 534396f1-7236-45c5-8afa-55a23ea2d197.json
.github/: copilot-instructions.md
Models/: LLM_setup.sh  SST_7B_Modelfile  SST_Gemma4_2B_Modelfile  SST_Gemma4_Modelfile  SST_Granite_8B_Modelfile  SST_Huihui_12B_Modelfile  SST_Modelfile  SST_Phi4_Mini_Modelfile  SST_Qwen2.5_1.5B_Instruct_Modelfile  SST_Qwen3.5_4B_Modelfile  SST_Qwen3.5_9B_Modelfile  SST_Qwen3.5_MTP_Modelfile  SST_Qwen3.6_MTP_Modelfile  SST_phi4_14b-sst_Modelfile  SST_qwen2.5_1.5b-sst_Modelfile  SST_qwen2.5_7b-sst_Modelfile  SST_qwen3.5_9b-sst_Modelfile  build_lightweight_sst.sh
core/: Dockerfile  pyproject.toml
core/src/core/: main.py  models.py
docs/: AGENT_GUIDE.md  AGENT_GUIDE_jp.md  Analysis_Report_Fingerprint_20260602.md  CLI_RECONSTRUCTION.md  CLI_RECONSTRUCTION_jp.md  DEPLOYMENT_GUIDE_jp.md  ERROR_LOGS.md  HANDOVER_act-12_jp.md  HANDOVER_act-13.md  HANDOVER_act-13_jp.md  IMPLEMENTATION_PLAN.md  Inference_Optimization.md  LOGIC.md  LOGIC_inside.md  Parallel_Optimization.md  SST.md  SST_AUDIT_REPORT.md  SST_AUDIT_REPORT_jp.md  SST_jp.md  Steam_Soundtrack_Metadata_Corrector.md  TAGGING_RULE.md  TAGGING_RULE_jp.md  TEST_ENVIRONMENT.md  TEST_ENVIRONMENT_jp.md  TODO_Decentralization.md  TODO_Decentralization_jp.md  VIRTUAL_ALBUM_RULES.md  Virtual_Album.md  act-12_TODO_jp.md  act-13_TODO.md  act-13_TODO_jp.md  api_rate_limit.md  batch_test_analysis_100.md  batch_test_analysis_prefetch_10.md  cache_architecture.md  cli_TODO.md  data_flow_diagram.md  discord_integration.md  error_handling.md  exception_handling.md  (+7 more)
docs/00_overview/: README.md  architecture.md  architecture_jp.md  quick_start.md  quick_start_jp.md
docs/01_spec/: config_spec.md  format_spec.md  format_spec_jp.md  interfaces.md  io_spec.md  io_spec_jp.md  tagging_spec.md  tagging_spec_jp.md
docs/02_execution/: identification_strategy.md  identification_strategy_jp.md  pipeline.md  pipeline_jp.md  retry_strategy.md  state_machine.md
docs/03_ai/: agent_prompt.md  llm_strategy.md  llm_strategy_jp.md  success_criteria.md  success_criteria_jp.md
docs/04_infra/: infrastructure.md  infrastructure_jp.md
docs/05_ui/: frontend_impl.md  frontend_impl_jp.md  ui_spec.md  ui_spec_jp.md
docs/archive/: AGENT_PROMPT.md  ARCHITECTURE.md  CODING_RULES.md  CONFIG_SPEC.md  DATA_CONTRACTS.md  DATA_FLOW.md  ERROR_HANDLING.md  INFRASTRUCTURE.md  INTERFACES.md  IO_SPEC.md  Inference_Optimization.md  SST.md  (+11 more)
report/: detailed_analysis_report.md  doc_consistency_check_20260627.md
rules/: RULE.md
scout/: .dockerignore  Dockerfile  README.md  pyproject.toml
scout/src/scout/: audit.py  builder.py  db.py  llm.py  log_browser.py  main.py  models.py  packager.py  processor.py  runner.py  scanner.py  storage.py  tagger.py  test_s3.py  uploader.py
scout/src/scout/ident/: acoustid.py  embedded.py  mbz.py
skills/: grill-me.md
tests/: test_track_grouper.py  test_utils.py
ui/: Dockerfile  pyproject.toml
ui/frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/components/dashboard/: AlbumCard.tsx  AlbumRow.tsx
ui/frontend/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx
ui/frontend/src/pages/: Archive.tsx  Dashboard.tsx  LLMLogs.tsx  Pipeline.tsx  Review.tsx
ui/src/ui/: __init__.py  main.py  s3_service.py
ui/src/ui/templates/: index.html  list.html
worker/: Dockerfile  pyproject.toml
worker/src/worker/: llm.py  main.py  models.py  storage.py  tagger.py  test_worker.py
worker/src/worker/ident/: cross_val.py
(+72 files in other folders)
