[project]
name = "sst"
version = "0.1.0"
description = "Steam Soundtrack Tagger"
readme = "README.md"
authors = [
    { name = "dEAdbEEF314", email = "deadbeef314@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pyacoustid>=1.3.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
    "vdf>=3.4",
]

[build-system]
requires = ["uv-build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
