[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dEAdbEEF314", email = "deadbeef314@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.89",
    "minio>=7.2.20",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "vdf>=3.4",
]

[build-system]
requires = ["uv-build>=0.10.12,<0.12.0"]
build-backend = "uv_build"
