[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dEAdbEEF314", email = "deadbeef314@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "boto3>=1.42.90",
    "fastapi>=0.136.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
    "httpx>=0.28.0",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
